@@ -671,9 +671,9 @@ constants.pages = {
       },
     },
     { type = "list_box", source = "can_craft", max_rows = 10 },
-    { type = "list_box", source = "recipe_categories", default_state = "collapsed" },
+    { type = "list_box", source = "recipe_categories", default_state = "hidden" },
     { type = "list_box", source = "can_burn" },
-    { type = "list_box", source = "fuel_categories", default_state = "collapsed" },
+    { type = "list_box", source = "fuel_categories", default_state = "hidden" },
     { type = "list_box", source = "accepted_modules", default_state = "hidden" },
     { type = "list_box", source = "unlocked_by" },
     { type = "list_box", source = "placed_by" },
@@ -693,8 +693,8 @@ constants.pages = {
     },
     { type = "table", source = "equipment_properties" },
     { type = "list_box", source = "can_burn" },
-    { type = "list_box", source = "fuel_categories", default_state = "collapsed" },
-    { type = "list_box", source = "equipment_categories", default_state = "collapsed" },
+    { type = "list_box", source = "fuel_categories", default_state = "hidden" },
+    { type = "list_box", source = "equipment_categories", default_state = "hidden" },
     { type = "list_box", source = "unlocked_by" },
   },
   fluid = {
@@ -790,13 +790,13 @@ constants.pages = {
     },
     { type = "list_box", source = "inputs" },
     { type = "list_box", source = "can_burn" },
-    { type = "list_box", source = "fuel_categories", default_state = "collapsed" },
+    { type = "list_box", source = "fuel_categories", default_state = "hidden" },
     { type = "list_box", source = "unlocked_by" },
     { type = "list_box", source = "placed_by" },
   },
   machine = {
     { type = "list_box", source = "can_burn" },
-    { type = "list_box", source = "fuel_categories", default_state = "collapsed" },
+    { type = "list_box", source = "fuel_categories", default_state = "hidden" },
     { type = "list_box", source = "accepted_equipment", default_state = "collapsed" },
     { type = "list_box", source = "equipment_categories", default_state = "hidden" },
     { type = "list_box", source = "unlocked_by" },
@@ -814,9 +814,9 @@ constants.pages = {
       },
     },
     { type = "list_box", source = "can_mine" },
-    { type = "list_box", source = "resource_categories", default_state = "collapsed" },
+    { type = "list_box", source = "resource_categories", default_state = "hidden" },
     { type = "list_box", source = "can_burn" },
-    { type = "list_box", source = "fuel_categories", default_state = "collapsed" },
+    { type = "list_box", source = "fuel_categories", default_state = "hidden" },
     { type = "list_box", source = "unlocked_by" },
     { type = "list_box", source = "placed_by" },
   },
